# fun-movie-catalog

./: .gitignore  LICENSE  README.md  fun-movie-catalog.cabal
src/: AdoroCinema.hs  AllCenter.hs  CapasBrasil.hs  CastGUI.hs  Catalog.hs  Catalog.old.2.hs  Catalog.old.hs  Catalog1.hs  Catalog2.hs  Catalog3.hs  Catalog_.hs  Comments.hs  Component.hs  DVDWorld.hs  EPipoca.hs  EditDist.hs  Filter.hs  Gui.hs  Gui1.hs  IMDB.hs  Interfilmes.hs  InternetSearch.hs  InternetSearch1.hs  InternetSearch2.hs  InternetSearch_.hs  Latex.hs  ListIconTest.hs  ListViewTest.hs  Manicomio.hs  Movie.hs  MovieCatalog.hs  MovieForm.hs  MovieFormType.hs  MovieHtml.hs  MyRegex.hs  ParseCollection.hs  ParseHTML.hs  Parser.hs  Parser1.hs  Prefs.hs  (+20 more)
src/Util/: Curl.hs  Regex.hs
